--- a/package.json
+++ b/package.json
@@ -27,14 +27,20 @@
   "dependencies": {
     "@types/config": "0.0.33",
     "@types/express": "^4.0.33",
+    "@types/jsonwebtoken": "^7.2.3",
     "@types/mongoose": "^4.7.24",
+    "@types/passport": "^0.3.5",
+    "@types/passport-jwt": "^2.0.25",
     "autobind-decorator": "1.4.1",
     "body-parser": "^1.15.2",
     "config": "^1.27.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.1.0",
     "moment": "^2.19.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.7.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0",
     "require-yml": "^1.3.1",
     "swagger-ui-express": "^2.0.8"
   }
